added per-tissue expressed/eQTL status to gene page
